--- a/job_application_page.html
+++ b/job_application_page.html
@@ -1,98 +1,305 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>تسجيل الموظفين - شغلني</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 30px;
-      background-color: #f9f9f9;
-    }
-    form {
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      background-color: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 12px;
-    }
-    input, textarea, button {
-      width: 100%;
-      margin-bottom: 15px;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    button {
-      background-color: #0d6efd;
-      color: white;
-      border: none;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>إدخال الوظائف - شغلني</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap');
+
+        :root {
+            --primary: #2563eb;
+            --primary-dark: #1e40af;
+            --secondary: #f59e0b;
+            --success: #10b981;
+            --danger: #ef4444;
+            --light: #f9fafb;
+            --dark: #1f2937;
+            --gray: #6b7280;
+        }
+
+        body {
+            font-family: 'Tajawal', sans-serif;
+            background-color: #f5f7fa;
+        }
+
+        .step {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: var(--primary);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+            font-weight: bold;
+        }
+
+        .step.active {
+            background-color: var(--success);
+        }
+
+        .step-container {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .form-card {
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            border: 2px solid transparent;
+        }
+
+        .form-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+            border-color: var(--primary);
+        }
+
+        .error-message {
+            color: var(--danger);
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
+    <!-- شريط التنقل -->
+    <nav class="bg-white shadow-lg sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-3">
+            <div class="flex justify-between items-center">
+                <div class="flex items-center space-x-4 rtl:space-x-reverse">
+                    <div class="text-2xl font-bold text-blue-600">شغلني</div>
+                </div>
 
-  <form id="employeeForm">
-    <h2>تسجيل موظف جديد</h2>
-    <input type="text" id="name" placeholder="اسم الموظف" required />
-    <input type="text" id="job" placeholder="المهنة أو الوظيفة" required />
-    <textarea id="skills" placeholder="المهارات والخبرات" required></textarea>
-    <input type="text" id="location" placeholder="موقع السكن" required />
-    <input type="text" id="phone" placeholder="رقم الهاتف" required />
-    <button type="submit">إرسال</button>
-  </form>
+                <div class="hidden md:flex items-center space-x-8 rtl:space-x-reverse">
+                    <a href="#" class="text-gray-700 hover:text-blue-600">الرئيسية</a>
+                    <a href="#" class="text-gray-700 hover:text-blue-600">عرض الوظائف</a>
+                    <a href="#" class="text-gray-700 hover:text-blue-600">عرض الموظفين</a>
+                    <a href="#" class="text-blue-600 font-medium">إدخال الوظائف</a>
+                </div>
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
+                <div class="flex items-center space-x-4 rtl:space-x-reverse">
+                    <div class="relative">
+                        <button class="p-1 rounded-full text-gray-600 hover:text-gray-900 focus:outline-none">
+                            <i class="fas fa-bell text-xl"></i>
+                            <span class="absolute top-0 right-0 h-2 w-2 rounded-full bg-red-500"></span>
+                        </button>
+                    </div>
+                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="صورة الملف الشخصي" class="w-10 h-10 rounded-full">
+                </div>
+            </div>
+        </div>
+    </nav>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
-      authDomain: "shaglni-c64c0.firebaseapp.com",
-      projectId: "shaglni-c64c0",
-      storageBucket: "shaglni-c64c0.firebasestorage.app",
-      messagingSenderId: "768887356636",
-      appId: "1:768887356636:web:7746666c5d007daf9c8819",
-      measurementId: "G-LZE4C9NG3M"
-    };
+    <!-- محتوى الصفحة -->
+    <div class="container mx-auto px-4 py-8">
+        <!-- خطوات إدخال الوظائف -->
+        <div class="step-container">
+            <div class="step active">1</div>
+            <div class="step">2</div>
+            <div class="step">3</div>
+            <div class="step">4</div>
+            <div class="step">5</div>
+        </div>
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+        <!-- نموذج إدخال الوظائف -->
+        <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card" id="step1">
+            <h2 class="text-lg font-bold mb-4">الخطوة 1: معلومات شخصية</h2>
+            <form id="jobForm">
+                <div class="mb-4">
+                    <label for="profileImage" class="block text-sm font-medium text-gray-700">رفع صورة الملف الشخصي</label>
+                    <input type="file" id="profileImage" accept="image/*" 
+                           class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="mb-4">
+                    <label for="fullName" class="block text-sm font-medium text-gray-700">الاسم بالكامل</label>
+                    <input type="text" id="fullName" placeholder="أدخل اسمك بالكامل" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
 
-    const form = document.getElementById("employeeForm");
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
+                <div class="mb-4">
+                    <label for="jobTitle" class="block text-sm font-medium text-gray-700">الوظيفة</label>
+                    <input type="text" id="jobTitle" placeholder="أدخل الوظيفة" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
 
-      const name = document.getElementById("name").value.trim();
-      const job = document.getElementById("job").value.trim();
-      const skills = document.getElementById("skills").value.trim();
-      const location = document.getElementById("location").value.trim();
-      const phone = document.getElementById("phone").value.trim();
+                <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="nextStep(1)">
+                    التالي
+                </button>
+            </form>
+        </div>
 
-      try {
-        await addDoc(collection(db, "employees"), {
-          name,
-          job,
-          skills,
-          location,
-          phone,
-          createdAt: new Date()
-        });
-        alert("تم تسجيل الموظف بنجاح!");
-        form.reset();
-      } catch (error) {
-        console.error("حدث خطأ أثناء الإرسال:", error);
-        alert("فشل في إرسال البيانات. حاول مرة أخرى.");
-      }
-    });
-  </script>
+        <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step2">
+            <h2 class="text-lg font-bold mb-4">الخطوة 2: تفاصيل الموقع والخبرة</h2>
+            <div class="mb-4">
+                <label for="jobLocation" class="block text-sm font-medium text-gray-700">الموقع</label>
+                <input type="text" id="jobLocation" placeholder="أدخل الموقع" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+
+            <div class="mb-4">
+                <label for="experienceYears" class="block text-sm font-medium text-gray-700">عدد سنوات الخبرة</label>
+                <input type="number" id="experienceYears" placeholder="كم سنة عملت في المجال" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+
+            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(2)">
+                السابق
+            </button>
+            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="nextStep(2)">
+                التالي
+            </button>
+        </div>
+
+        <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step3">
+            <h2 class="text-lg font-bold mb-4">الخطوة 3: المهارات</h2>
+            <div class="mb-4">
+                <label for="skill1" class="block text-sm font-medium text-gray-700">المهارة 1</label>
+                <input type="text" id="skill1" placeholder="أدخل المهارة" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <label for="skill2" class="block text-sm font-medium text-gray-700">المهارة 2</label>
+                <input type="text" id="skill2" placeholder="أدخل المهارة" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <label for="skill3" class="block text-sm font-medium text-gray-700">المهارة 3</label>
+                <input type="text" id="skill3" placeholder="أدخل المهارة" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <label for="skill4" class="block text-sm font-medium text-gray-700">المهارة 4</label>
+                <input type="text" id="skill4" placeholder="أدخل المهارة" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <label for="skill5" class="block text-sm font-medium text-gray-700">المهارة 5</label>
+                <input type="text" id="skill5" placeholder="أدخل المهارة" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+            <div class="error-message hidden" id="skillError">يرجى إدخال مهارات تتعلق بالوظيفة المحددة.</div>
+
+            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(3)">
+                السابق
+            </button>
+            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="validateSkills()">
+                التالي
+            </button>
+        </div>
+
+        <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step4">
+            <h2 class="text-lg font-bold mb-4">الخطوة 4: الأعمال السابقة</h2>
+            <div class="mb-4">
+                <label for="previousWorks" class="block text-sm font-medium text-gray-700">رفع صور الأعمال السابقة</label>
+                <input type="file" id="previousWorks" multiple 
+                       class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+
+            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(4)">
+                السابق
+            </button>
+            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="nextStep(4)">
+                التالي
+            </button>
+        </div>
+
+        <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step5">
+            <h2 class="text-lg font-bold mb-4">الخطوة 5: تأكيد المعلومات</h2>
+            <p class="text-gray-700 mb-4">يرجى مراجعة المعلومات المدخلة بعناية قبل الإرسال. تأكد من أن جميع المعلومات صحيحة ودقيقة لضمان المصداقية.</p>
+            <div class="mb-4">
+                <label for="salaryFrom" class="block text-sm font-medium text-gray-700">السعر من</label>
+                <input type="number" id="salaryFrom" placeholder="أدخل السعر الأدنى" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <label for="salaryTo" class="block text-sm font-medium text-gray-700">إلى</label>
+                <input type="number" id="salaryTo" placeholder="أدخل السعر الأعلى" 
+                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+            </div>
+
+            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(5)">
+                السابق
+            </button>
+            <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="submitForm()">
+                إرسال
+            </button>
+        </div>
+    </div>
+
+    <script>
+        let currentStep = 1;
+
+        function nextStep(step) {
+            document.getElementById(`step${step}`).classList.add('hidden');
+            currentStep++;
+            document.getElementById(`step${currentStep}`).classList.remove('hidden');
+            updateSteps();
+        }
+
+        function prevStep(step) {
+            document.getElementById(`step${step}`).classList.add('hidden');
+            currentStep--;
+            document.getElementById(`step${currentStep}`).classList.remove('hidden');
+            updateSteps();
+        }
+
+        function updateSteps() {
+            const steps = document.querySelectorAll('.step');
+            steps.forEach((step, index) => {
+                step.classList.remove('active');
+                if (index < currentStep) {
+                    step.classList.add('active');
+                }
+            });
+        }
+
+        function validateSkills() {
+            const jobTitle = document.getElementById('jobTitle').value.toLowerCase();
+            const skillInputs = [
+                document.getElementById('skill1'),
+                document.getElementById('skill2'),
+                document.getElementById('skill3'),
+                document.getElementById('skill4'),
+                document.getElementById('skill5')
+            ];
+            
+            // التحقق من وجود نصوص فارغة
+            for (let input of skillInputs) {
+                if (!input.value.trim()) {
+                    document.getElementById('skillError').textContent = 'يرجى إدخال جميع المهارات المطلوبة';
+                    document.getElementById('skillError').classList.remove('hidden');
+                    return;
+                }
+            }
+
+            const skills = skillInputs.map(input => input.value.toLowerCase());
+            let relevantSkillsCount = 0;
+            const minRelatedSkills = 2; // العدد الأدنى للمهارات ذات الصلة
+            
+            for (let skill of skills) {
+                if (skill.includes(jobTitle) || jobTitle.includes(skill)) {
+                    relevantSkillsCount++;
+                }
+            }
+
+            if (relevantSkillsCount < minRelatedSkills) {
+                document.getElementById('skillError').textContent = `يجب أن يكون لديك ${minRelatedSkills} مهارات على الأقل ذات صلة بالوظيفة`;
+                document.getElementById('skillError').classList.remove('hidden');
+            } else {
+                document.getElementById('skillError').classList.add('hidden');
+                nextStep(3); // نستخدم رقم الخطوة الحالية لننتقل للخطوة التالية
+            }
+        }
+
+        function submitForm() {
+            alert('تم إرسال الوظيفة بنجاح! تأكد من مراجعة المعلومات المدخلة.');
+            window.location.href = 'available_employees.html'; // استبدل هذا بالرابط الصحيح
+        }
+    </script>
 </body>
 </html>
